--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,24 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+.shine {
+  position: absolute;
+  top: 0;
+  left: -75%;
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0.2) 0%,
+    rgba(255, 255, 255, 0.6) 50%,
+    rgba(255, 255, 255, 0.2) 100%
+  );
+  transform: skewX(-25deg);
+  transition: left 0.7s;
+}
+
+.group:hover .shine {
+  left: 125%;
+}
