--- a/src/components/animation.module.css
+++ b/src/components/animation.module.css
@@ -180,12 +180,7 @@
 .card2 .card_body {
   position: relative;
   height: 100vh;
-  background: radial-gradient(
-    circle,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(255, 255, 255, 1) 100%
-  );
+  background: white;
 }
 
 .card2 .card_body::after {
